<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <Button
            android:id="@+id/btn_singleton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:textAllCaps="false"
            android:text="@string/str_singleton"/>

        <Button
            android:id="@+id/btn_static_fun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:textAllCaps="false"
            android:text="@string/str_static_fun"/>

        <Button
            android:id="@+id/btn_recyclerview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:textAllCaps="false"
            android:text="@string/str_recyclerview"/>

        <Button
            android:id="@+id/btn_anko"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:textAllCaps="false"
            android:text="@string/str_anko_demo"/>

        <Button
            android:id="@+id/btn_rxjava"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:textAllCaps="false"
            android:text="@string/str_rxjava_demo"/>
    </LinearLayout>

</ScrollView>